--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 languageCode = "en-us"
-title = "PaoPaoTang's Blog"
+title = "Bubble Nest"
 baseurl = "https://strongpaopaotang.github.io/PPTBlog/"
 contentdir = "content"
 layoutdir = "layouts"
